--- a/.gitignore
+++ b/.gitignore
@@ -275,6 +275,6 @@ fabric.properties
 # Linux trash folder which might appear on any partition or disk
 .Trash-*
 .idea
-/src/paged_archive.c
+/src/_archive.c
 */cmake-build-debug
 tests/data
